# proyecto1-ds

./: .gitignore  AGENTS.md  README.md  pipeline_limpieza.py  pyproject.toml
data/decisions/: duplicados_aprobados.csv  telefonos_aprobados.csv
data/interim/: establecimientos_diversificado_raw_unificado.csv
data/processed/: establecimientos_diversificado_limpio.csv
data/raw/: manifest.json  mineduc_busca_establecimiento_diversificado_00.html  mineduc_busca_establecimiento_diversificado_01.html  mineduc_busca_establecimiento_diversificado_02.html  mineduc_busca_establecimiento_diversificado_03.html  (+19 more)
docs/: auditoria_final.md  code_book.css  code_book.md  diagnostico.md  fuentes_datos.md  instrucciones.md  plan_limpieza.md  planificacion.md  reconciliacion_anggie.md
notebooks/: 01_scraping.ipynb
openspec/: config.yaml
scripts/: adquirir_datos.py  consolidar_crudos.py  decidir_duplicados.py  detectar_duplicados.py  diagnosticar_crudos.py  generar_catalogo_territorial.py  generar_code_book.py  generar_code_book_pdf.py  generar_reporte_calidad.py  limpiar_dataset.py  revisar_pendientes.py  validar_dataset.py  validar_territorio.py
src/: scraper.py
tests/: test_acquisition.py  test_cleaning.py  test_cleaning_cli.py  test_cli.py  test_code_book.py  test_code_book_pdf.py  test_consolidation.py  test_decision_manifests.py  test_diagnostics.py  test_duplicates_decisions.py  test_manifest.py  test_pending_review.py  test_pipeline_limpieza.py  test_quality_report.py  test_repository_cleanup.py  test_territorial_contract.py  test_validation.py
(+98 files in other folders)
