[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto1-ds"
version = "0.1.0"
description = "Bootstrap reproducible para adquisición y diagnóstico de datos crudos MINEDUC."
requires-python = ">=3.11"
dependencies = [
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
